@@ -42,7 +42,6 @@ public class SWebHdfsFileSystem extends WebHdfsFileSystem {
 
   @Override
   protected int getDefaultPort() {
-    return getConf().getInt(DFSConfigKeys.DFS_NAMENODE_HTTPS_PORT_KEY,
-        DFSConfigKeys.DFS_NAMENODE_HTTPS_PORT_DEFAULT);
+    return DFSConfigKeys.DFS_NAMENODE_HTTPS_PORT_DEFAULT;
   }
 }
